--- a/app.json
+++ b/app.json
@@ -6,7 +6,8 @@
     "pages/detail-search/detail-search",
     "components/area-header/area-header",
     "pages/detail-songs/detail-songs",
-    "components/song-detail-header/song-detail-header"
+    "components/song-detail-header/song-detail-header",
+    "pages/music-player/music-player"
   ],
   "window": {
     "backgroundTextStyle": "light",
