--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "components/area-header/area-header",
     "pages/detail-songs/detail-songs",
     "components/song-detail-header/song-detail-header",
-    "pages/music-player/music-player"
+    "pages/music-player/music-player",
+    "pages/home-profile/home-profile"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -15,6 +16,9 @@
     "navigationBarTitleText": "Weixin",
     "navigationBarTextStyle": "black"
   },
+  "requiredBackgroundModes": [
+    "audio"
+  ],
   "tabBar": {
     "list": [
       {
@@ -28,6 +32,12 @@
         "text": "视频",
         "iconPath": "assets/images/tabbar/video_normal.png",
         "selectedIconPath": "assets/images/tabbar/video_active.png"
+      },
+      {
+        "pagePath": "pages/home-profile/home-profile",
+        "text": "我的",
+        "iconPath": "assets/images/tabbar/profile_normal.png",
+        "selectedIconPath": "assets/images/tabbar/profile_active.png"
       }
     ]
   },
